--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -12,17 +13,19 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "font-awesome": "4.7.0",
+    "history": "^5.0.0",
     "mysql": "^2.18.1",
     "react": "^16.13.1",
     "react-animation-components": "^3.0.0",
+    "react-bootstrap": "^1.1.1",
     "react-dom": "^16.13.1",
     "react-popper": "0.9.2",
-    "react-redux": "5.0.7",
-    "react-redux-form": "1.16.8",
-    "react-router-dom": "4.2.2",
+    "react-redux": "^7.2.0",
+    "react-redux-form": "^1.16.14",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "reactstrap": "5.0.0",
-    "redux": "3.7.2"
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
